Add Roberto Boriotti, a contributor for the italian translation.

--- a/lib/messagebundles/Locales-Contributors.html
+++ b/lib/messagebundles/Locales-Contributors.html
@@ -506,6 +506,8 @@ table.loc tbody tr.b td { background: #CCFF99; color: #000000; }
 <td valign="top"><code>it</code></td><td valign="top" rowspan="2" xml:lang="it">Italia</td><td valign="top" rowspan="2"><em>Italy</em></td>
 <td valign="top" rowspan="4">Messages</td>
 <td valign="top" rowspan="4">
+  <b>Roberto Boriotti</b><br />
+  &lt;roberto.boriotti <em>AT</em> canon-europe <em>DOT</em> com&gt;,<br />
   <b>Matteo Bazzu</b><br />
   &lt;bazzu <em>AT</em> tecna <em>DOT</em> it&gt;,<br />
   <b>Toti Calò</b><br />
