Incomplete initial Farsi translation contributed by "Ehsan Mx" (ehsanmx AT gmail DOT com). 9,31% complete. Still not enough to be released.

--- a/lib/messagebundles/Locales-Contributors.html
+++ b/lib/messagebundles/Locales-Contributors.html
@@ -1093,6 +1093,8 @@ table.loc tbody tr.b td { background: #CCFF99; color: #000000; }
 <td valign="top"><code>fa</code></td><td valign="top" rowspan="2" xml:lang="fa" class="rtl"><font face="Tahoma, Simplified Arabic, Arabic Transparent">ايران</font></td><td valign="top" rowspan="2"><em>Iran</em></td>
 <td valign="top" rowspan="2">Messages</td>
 <td valign="top" rowspan="2">
+  <b>Ehsan Mx</b><br />
+  &lt;ehsanmx <em>AT</em> gmail <em>DOT</em> com&gt;,<br />
   <b>Amin Karimi</b><br />
   &lt;amin.karimi <em>AT</em> gmail <em>DOT</em> com&gt;
 </td></tr>
